# kpsr-core-benchmarks

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
.github/workflows/: prcodecheck.yml  push.yml
analysis/: TOOL_EXECUTION.md  TOOL_PREPARATION.md  bm.out
benchmark/: CMakeLists.txt
benchmark/benchmark_core/: CMakeLists.txt
benchmark/benchmark_core/src/: BM_EventEmitter_Test.cpp
benchmark/benchmark_json/: CMakeLists.txt
benchmark/benchmark_json/gtest/: GtestSerialization.cpp  main.cpp
benchmark/benchmark_json/include/: BmCereal.h  BmPods.h  BmSimdjson.h  BmYas.h  SerializationBenchmarkUtils.h  VectorFloatStruct.h  VectorFloatStruct4Cereal.h  VectorFloatStruct4Pods.h  VectorFloatStruct4Yas.h
benchmark/benchmark_json/src/: BM_Cereal_vs_Simdjson_Test.cpp  BmMain.cpp  kpsr.json
benchmark/benchmark_json/tests/: GtestSerialization.cpp  main.cpp
